<resources>
    <string name="app_name">Vibez</string>
    <string name="register">REGISTER</string>
    <string name="first_name">First Name</string>
    <string name="email">xyz@gmail.com</string>
    <string name="last_name">Last Name</string>
    <string name="enter_a_password">Enter a password</string>
    <string name="vibe_with_vibez">Vibe with Vibez</string>
    <string name="sign_up">Sign up</string>
    <string name="Name">John Doe</string>
    <string name="sampleEmail">johndoe@gmail.com</string>
    <string name="have_an_account">Have an account?</string>
    <string name="log_in">Log in</string>
    <string name="welcome_back_to_vibez">Welcome Back to Vibez</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="loggin">Log in</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="save_changes">Save Changes</string>
</resources>