<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="handler"
            type="com.soham.vibez.activity.LoginActivity.LoginClickHandler" />
    </data>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/app_background"
        tools:context=".activity.LoginActivity">
        <TextView
            android:id="@+id/welcome"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:textColor="@color/black"
            android:text="@string/welcome_back_to_vibez"
            android:gravity="center" />


        <EditText
            android:layout_marginTop="100dp"
            android:id="@+id/etEmail"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcome"
            android:layout_marginHorizontal="16sp"
            android:layout_marginBottom="16dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:hint="@string/sampleEmail" />
        <EditText
            android:layout_below="@id/etEmail"
            android:id="@+id/etPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:hint="@string/enter_a_password" />
        <Button
            android:id="@+id/loginBtn"
            android:layout_below="@id/etPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{handler::onLogin}"
            android:layout_marginBottom="16sp"
            android:layout_centerHorizontal="true"
            android:text="@string/loggin" />
        <TextView
            android:id="@+id/text"
            android:layout_below="@id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginStart="16dp"
            android:textSize="14sp"
            android:text="@string/don_t_have_an_account" />
        <TextView
            android:id="@+id/newUserSignup"
            android:layout_width="wrap_content"
            android:layout_toEndOf="@id/text"
            android:layout_below="@id/loginBtn"
            android:text="@string/sign_up_now"
            android:onClick="@{handler::onNewUser}"
            android:textColor="#f5af19"
            android:layout_marginStart="8dp"
            android:layout_height="wrap_content"
            android:textSize="14sp" />
    </RelativeLayout>
</layout>
